2004-10-14  Derek Price  <derek@ximbiot.com>

	* NEWS: Note new import branch verification.

2004-10-10  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove call to gl_FUNC_STRERROR.
	* gnulib-update (MODULES): Add strerror.
	* srclist.txt (strerror): Remove list generated by gnulib-update.

2004-10-09  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove call to gl_FUNC_LSTAT.
	* gnulib-update (MODULES): Add lstat.
	* srclist.txt (lstat): Remove list generated by gnulib-update.

2004-10-09  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove call to gl_FUNC_STAT.
	* gnulib-update (MODULES): Add stat.
	* srclist.txt (stat): Remove list generated by gnulib-update.

2004-10-09  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove call to gl_FUNC_NANOSLEEP.
	* gnulib-update (MODULES): Add nanosleep.
	* srclist.txt (nanosleep): Remove list generated by gnulib-update.

2004-10-09  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove call to gl_FUNC_MEMMOVE.
	* gnulib-update (MODULES): Add memmove.
	* srclist.txt (memmove): Remove list generated by gnulib-update.

2004-10-09  Derek Price  <derek@ximbiot.com>

	* gnulib-update (MODULES): Add minmax.
	* srclist.txt (minmax): Remove list generated by gnulib-update.

2004-10-07  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove call to gl_TIME_R, gl_FUNC_MKTIME.
	* gnulib-update (MODULES): Add restrict, time_r, & mktime.
	* srclist.txt (restrict, time_r, mktime): Remove lists generated by
	gnulib-update.

2004-10-07  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove call to gl_FUNC_TZSET_CLOBBER.
	* gnulib-update (MODULES): Add tzset.
	* srclist.txt (tzset): Remove list generated by gnulib-update.

2004-10-07  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove call to gl_FUNC_GLIBC_UNLOCKED_IO.
	* gnulib-update (MODULES): Add unlocked-io.
	* srclist.txt (unlocked-io): Remove list generated by gnulib-update.

2004-10-07  Derek Price  <derek@ximbiot.com>
