@@ -25,7 +25,7 @@ MODULES="gettext vasnprintf regex atexit save-cwd dirname exit exitfail
 	 extensions fnmatch-posix fnmatch mkstemp getopt stdbool getline
 	 getnline getndelim2 gethostname strcase getpass-gnu gettimeofday
 	 timespec gettime unlocked-io tzset restrict time_r mktime minmax
-	 memmove nanosleep stat lstat strerror"
+	 memmove nanosleep stat lstat strerror vasprintf"
 
 # Are the GNULIB sources really where we expect them?
 if test -r $GNULIB && test -d $GNULIB \
